--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0"
-metadata-complete="true"> <!-- metadata-complete 設定為true 才會以web.xm url-pattern為主否則Anotation 設定的url-pattern也會有效 -->
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" metadata-complete="true" version="3.0">
   <display-name>Servlet</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -11,23 +10,52 @@ metadata-complete="true"> <!-- metadata-complete 設定為true 才會以web.xm u
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-  	<servlet-name>MyCounter1</servlet-name>
-  	<servlet-class>test01_servlet.MyCounter1</servlet-class>
-  	<load-on-startup>10</load-on-startup>
+    <servlet-name>MyCounter1</servlet-name>
+    <servlet-class>test01_servlet.MyCounter1</servlet-class>
+    <load-on-startup>10</load-on-startup>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>MyCounter1</servlet-name>
-  	<url-pattern>/myCounter1</url-pattern>
+    <servlet-name>MyCounter1</servlet-name>
+    <url-pattern>/myCounter1</url-pattern>
   </servlet-mapping>
-  
-   <servlet>
-  	<servlet-name>MyCounter2</servlet-name>
-  	<servlet-class>test01_servlet.MyCounter2</servlet-class>
+  <servlet>
+    <servlet-name>MyCounter2</servlet-name>
+    <servlet-class>test01_servlet.MyCounter2</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>MyCounter2</servlet-name>
-  
-  	<url-pattern>*.mm</url-pattern>
+    <servlet-name>MyCounter2</servlet-name>
+    <url-pattern>*.mm</url-pattern>
   </servlet-mapping>
-  
+  <servlet>
+    <servlet-name>MyCounter3</servlet-name>
+    <servlet-class>test01_servlet.MyCounter3</servlet-class>
+    <init-param>
+      <param-name>initParam1</param-name>
+      <param-value>10</param-value>
+    </init-param>
+    <init-param>
+      <param-name>initParam2</param-name>
+      <param-value>20</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MyCounter3</servlet-name>
+    <url-pattern>/MyCounter3</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>MyCounter4</servlet-name>
+    <servlet-class>test01_servlet.MyCounter4_sychronization</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MyCounter4</servlet-name>
+    <url-pattern>/MyCounter4</url-pattern>
+  </servlet-mapping>
+    <servlet>
+    <servlet-name>MyCounter5</servlet-name>
+    <servlet-class>test01_servlet.MyCounter5_destroy</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MyCounter5</servlet-name>
+    <url-pattern>/MyCounter5</url-pattern>
+  </servlet-mapping>
 </web-app>
